# solana-sc

./: .gitignore  Anchor.toml  Readme.md  cli_config.json.template
cli/: Cargo.toml
cli/src/: app.rs  config.rs  main.rs
cli/src/commands/: common.rs  distribution.rs  fighting.rs  freezing.rs  gpass.rs  mod.rs  reward_distribution.rs  staking.rs
cli/src/handlers/: common.rs  distribution.rs  fighting.rs  freezing.rs  gpass.rs  mod.rs  reward_distribution.rs  staking.rs  utils.rs
programs/distribution/: Cargo.toml
programs/distribution/src/: context.rs  error.rs  lib.rs  state.rs
programs/fighting/: Cargo.toml
programs/fighting/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
programs/freezing/: Cargo.toml
programs/freezing/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
programs/gpass/: Cargo.toml
programs/gpass/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
programs/reward-distribution/: Cargo.toml
programs/reward-distribution/src/: context.rs  error.rs  lib.rs  state.rs
programs/staking/: Cargo.toml
programs/staking/src/: context.rs  error.rs  lib.rs  state.rs  utils.rs
tests/: utils.ts
tests/distribution/: authority.ts  fixture.ts  functional.ts
tests/fighting/: authority.ts  fixture.ts  functional.ts
tests/freezing/: authority.ts  bad_cases.ts  badcases.ts  fixture.ts  freezing.ts  functional.ts
tests/gpass/: authority.ts  functional.ts  initialize.ts
tests/reward-distribution/: authority.ts  fixture.ts  functional.ts
tests/staking/: authority.ts  fixture.ts  functional.ts  initialize.ts
(+1 files in other folders)
