[package]
name = "cli-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Misc
serde = "1.0.130"
serde_json = "1.0.68"
clap = "2.33.3"
dirs-next = "2.0.0"
borsh = "0.9.3"

# Solana dependencies
anchor-client = "0.25.0"
solana-clap-utils = "1.7.11"

# SPL Token
spl-token = { version="3.3.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0.3"

# Smart contracts
gpass = { path = "../programs/gpass", features = ["no-entrypoint"] }
freezing = { path = "../programs/freezing", features = ["no-entrypoint"] }
staking = { path = "../programs/staking", features = ["no-entrypoint"] }
distribution = { path = "../programs/distribution", features = ["no-entrypoint"] }
fighting = { path = "../programs/fighting", features = ["no-entrypoint"] }

[[bin]]
name = "cli-client"
path = "src/main.rs"
