[package]
name = "fighting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fighting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = "0.25.0"

gpass = { path = "../gpass", features = ["cpi"] }
freezing = { path = "../freezing", features = ["cpi"] }
reward-distribution = { path = "../reward-distribution", features = ["cpi"] }
